_sass/mytheme/_style.scss
html,body {
	margin:0;
	height:100%;
	padding:0;
}
body {
	font-family:$base-font-family;
	background:$background-color;
	color:$text-color;
}
.wrapper {
	display:flex;
	flex-direction:row;
	height:100%;
	width:100%;
}
.logo {
	background:$brand-color;
	position:absolute;
	width:250px;
	height:70px;
	box-shadow: 8px 5px 0 $card-color-1,
				16px 10px 0 $card-color-2;
	h1 {
		font-weight:400;
		text-align:center;
		padding:0;
		margin:0;
		line-height:70px;
		a {
			color:$text-color;
			text-decoration:none;
			border-radius:5px;
			padding:3px 5px;
			transition:color 0.2s, background 0.3s;
			&:hover {
				color:$brand-color;
				background:$text-color;
			}
		}
	}
}
.sidebar {
	order:0;
	height:100%;
	background:$sidebar-color;
	width:$sidebar-width;
	z-index:1;	
	margin-right:12px;
	display:flex;
	flex-direction:column;
	
	box-shadow: 4px 0 0 $border-color-1,
				7px 0 0 $sidebar-color,
				9px 0 0 $border-color-1,
				11px 0 0 $sidebar-color,
				12px 0 0 $border-color-1;
}
.search-container {
	// background:blue;
	padding:0.5em 0.5em 1em 0.5em;
	text-align:center;
	background:lighten($sidebar-color, 10%);
	box-shadow:  0 2px 0 $sidebar-color,
				 0 4px 0 lighten($sidebar-color, 10%);
	input {
		margin-top:0.5em;
		font-family:$base-font-family;
		border-radius:5px;
		box-shadow:none;
		border:none;
		outline:none;
		font-size:14pt;
		width:8em;
		padding:0.1em 0.2em;
		border:2px solid $sidebar-color;
		background:none;
		transition: color 0.2s, background 0.2s;
		color:#888;
		&::placeholder {
			color:#888;
		}
		&:focus {
			color:black;
			background:white;
		}
	}
}
.padding-item {
	height:100px;
}
.list-container {
	height:100%;
	padding:0px 5px 5px 10px;
	overflow-y:auto;
	// &::-webkit-scrollbar {
	//     width: 7px;
	//     background: rgba(0, 0, 0, 0.5); /* make scrollbar transparent */
	// }
	
	&::-webkit-scrollbar-track {
		border-radius: 7px;
		background-color: rgba(20, 20, 20, 0.5);
	}

	&::-webkit-scrollbar {
		width: 7px;
		background-color: rgba(20, 20, 20, 0.5);
	}

	&::-webkit-scrollbar-thumb
	{
		background-color: #AAA;
		border-radius: 10px;
		background-image: -webkit-linear-gradient(90deg,
		                                          rgba(0, 0, 0, .2) 25%,
												  transparent 25%,
												  transparent 50%,
												  rgba(0, 0, 0, .2) 50%,
												  rgba(0, 0, 0, .2) 75%,
												  transparent 75%,
												  transparent)
	}



	ul {
		list-style:none;
		padding:0;
		text-align:center;
	}
	li {
		margin: 1.5em 0;
	}
	.demo-link {
		padding:0.5em 0.5em;
		border-radius:7px;
		transition: background 0.2s, color 0.2s;
		&:hover {
			background:darken($text-color,40%);
			color:$sidebar-color;
		}
	}
	.demo-active {
		background:red;
		background:$text-color;
		color:$sidebar-color;
		border-radius:0;
		font-weight:600;
		&:hover {
			background:$text-color;
		}
	}
	a {
		color:$text-color;
		text-decoration:none;
	}
}
.hidden {
	display:none;
}
.page-content {
	order:1;
	flex-grow:1;
	// background:blue;
	// width:100%;
	position:relative;
	.about-link {
		background:white;
		opacity:0.5;
		position:absolute;
		right:10px;
		top:10px;
		border-radius:3px;
		margin:0;
		padding:5px 8px;
		transition:opacity 0.2s;
		a {
			color:$background-color;
			text-decoration: none;
		}
		&:hover {
			opacity:1;		
		}
	}
	iframe {
		width:100%;
		height:100%;
	}
}
.about-sidebar {
	.close-button {
		opacity:0.5;
		width:1.5em;
		height:1.5em;
		background:$text-color;
		text-align:center;
		line-height:1.5em;
		border-radius:1000px;
		position:absolute;
		top:5px;
		right:5px;
		transition:opacity 0.25s;
		&:hover {
			opacity:1;
		}
		a {
			text-decoration: none;
			color:$background-color;
		}
	}
	height:100%;
	width:400px;
	position:fixed;
	right:-400px;
	background:$sidebar-color;
	z-index:1;
}
#about:target {
	right:0;
}
.about-container {
	margin: 0 2em;
	font-size:12pt;
	line-height:1.5em;
	text-align:justify;
	pre {
		code {
			margin:0;
			padding:0;
			line-height:1em;
		}
		line-height:1em;
		outline:1px solid #e3e3e3;
		padding:0.5em 1em;
		background:lighten($sidebar-color,30%);
	}
	h1 {
		font-weight:400;
		text-align:center;
		color:$text-color;
	}
	a {
		font-weight:600;
		color:$link-color;
		&:visited{
			color:$link-color;
		}
		&:hover {
			color:darken($link-color, 10%);
		}
	}
}

